Inserted information on how we handle completely running out of inventory in our example.

--- a/reports - 1 - Planning/nordstrom-allocation.tex
+++ b/reports - 1 - Planning/nordstrom-allocation.tex
@@ -176,7 +176,7 @@ Rather than generate values of $\mathbf{Y}$ and derive posterior distributions f
 
 We determined an appropriate buy by deriving the posterior distribution of the cumulative demand across all regions at time $t = 100$.  The $90^{th}$ percentile of the posterior predictive distribution of demand was \SI{2828} units.  That number was selected as the buy, so $b = 2828$.
 
-The most complicated part of the simulated example was the specification of the rules for fulfillment or orders and transfer between fulfillment centers.  For fulfillment orders, the general strategy is to minimize $\sum_{k = 1}^K \sum_{i = 1}^{n_{kt}} c_1 (f_{tki}, h_{tki})$, the total cost of fulfillment, at any time point $t$.  At time points for which all fulfillment centers had sufficient remaining inventory to deliver to all of the ordering households for which it was the closest center, the fulfillment rule was simple --- households receive their order from the closest fulfillment center.  At time points for which fulfillment cannot be satisfied by the fulfillment center closest to a household placing an order, a sequential deterministic rule was used to reassign fulfillment to other centers.  Across all of the fulfillment centers with insufficient inventory to fulfill an order, we calculated the distance from the fulfillment centers with excess inventory to each of the ordering households.  The household with the minimum distance from a fulfillment center with excess inventory was moved from its currently assigned under-stocked fulfillment center to that alternate fulfillment center.
+The most complicated part of the simulated example was the specification of the rules for fulfillment or orders and transfer between fulfillment centers.  For fulfillment orders, the general strategy is to minimize $\sum_{k = 1}^K \sum_{i = 1}^{n_{kt}} c_1 (f_{tki}, h_{tki})$, the total cost of fulfillment, at any time point $t$.  At time points for which all fulfillment centers had sufficient remaining inventory to deliver to all of the ordering households for which it was the closest center, the fulfillment rule was simple --- households receive their order from the closest fulfillment center.  At time points for which fulfillment cannot be satisfied by the fulfillment center closest to a household placing an order, a sequential deterministic rule was used to reassign fulfillment to other centers.  Across all of the fulfillment centers with insufficient inventory to fulfill an order, we calculated the distance from the fulfillment centers with excess inventory to each of the ordering households.  The household with the minimum distance from a fulfillment center with excess inventory was moved from its currently assigned under-stocked fulfillment center to that alternate fulfillment center.  On days in which the total inventory across fulfillment centers was less than the total orders, a random set of orders was selected to fulfill.
 
 For transfer, inventories were assessed after orders were fulfilled at each time point.  For each fulfillment center, we first calculated its forecasted remaining orders (ignoring the fact that forecasts can be updated dynamically based on observed sales).  Since forecasts are available only at the region level, each fulfillment center was associated with the regions with centroids closest to that fulfillment center.  Referring to Figure~\ref{fi:hhfclocs}, the assignments were as follows: fulfillment center 1 is associated with region 4, fulfillment center 2 is associated with regions 5 and 7, fulfillment center 3 is associated with regions 1 and 8, and fulfillment center 4 is associated with regions 2, 3, and 6.  After calculating forecasted remaining orders, we calculated the difference between that forecast and the number of units remaining in inventory.  If one center was at least 25 units short and another center had at least 25 units too many, a transfer was made.  Transfers were always made from the fulfillment center that was the most over-stocked to the center that was the most under-stocked.  The number of units transferred was the minimum of the number required to meet the forecast needs of the under-stocked fulfillment center or the number of excess units in the over-stocked center.
 
